--- a/smartgrep/makefile
+++ b/smartgrep/makefile
@@ -1,13 +1,13 @@
 #
 # makefile for Unix / Linux / MacOS
-# Copyright (C) 2011 pebble
+# Copyright (C) 2011-2012 pebble8888@gmail.com
 #
 CC=gcc
-TARGET=pgrep
+TARGET=smartgrep
 
 all:$(TARGET)
 
-OBJS=pgrep.o
+OBJS=smartgrep.o
 
 $(TARGET): $(OBJS)
 	$(CC) -o $@ $?
