Add libraries for mingw32

--- a/smartgrep/makefile
+++ b/smartgrep/makefile
@@ -4,13 +4,18 @@
 #
 CC=gcc
 TARGET=smartgrep
+LIBS=
+
+ifeq ($(OS),Windows_NT) 
+LIBS+=-lversion -lstdc++
+endif
 
 all:$(TARGET)
 
 OBJS=smartgrep.o
 
 $(TARGET): $(OBJS)
-	$(CC) -o $@ $?
+	$(CC) -o $@ $? $(LIBS)
 	rm -f $(OBJS)
 	
 .c.o:
