--- a/src/makefile
+++ b/src/makefile
@@ -69,4 +69,5 @@ test:
 	sh ./unittest.sh testpbxproj 1
 	sh ./unittest.sh testplist 1
 	sh ./unittest.sh swift_alpha 2
+	sh ./unittest.sh storyboardtest 1
 
