--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,8 @@
 language: cpp
 compiler:
   - gcc
+before_install:
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+install:
+  - sudo apt-get install -qq g++-4.8
 script: cd src && make && make test
