--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,18 @@
 # @see http://about.travis-ci.org/docs/user/getting-started/
 language: cpp
+sudo: false
 compiler:
+  - clang
   - gcc
-before_install:
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
 install:
-  - sudo apt-get install -qq g++-4.8
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - gcc-4.8
+    - g++-4.8
+    - clang
 script: cd src && make && make test
+
